message AddUserRequestMessage {
    message AddUserRequest {
        required string userName = 239;
        required string userPass = 240;
    }
    required AddUserRequest credentials = 241;
}
