message DeviceConfigurationMessage {
	message Name {
		repeated bytes components = 8;
	}
    message DeviceConfiguration {
        required Name networkPrefix = 231;
        required Name controllerName = 232;
        required Name deviceSuffix = 233;
    }
	required DeviceConfiguration configuration = 234;
}
